# fastapi-pydantic-v2

./: Makefile  README.md  db.py  dependency.py  main.py  model.py  pyproject.toml
