[project]
name = "fastapi-pydantic-v2"
version = "0.1.0"
description = "Sample implementation to validate requests with custom context."
authors = [
    { name = "Sogo Kato", email = "sogokato@outlook.com" }
]
dependencies = [
    "fastapi>=0.109.2",
    "pydantic>=2.6.1",
    "uvicorn>=0.27.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.2.0",
    "isort>=5.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true # https://github.com/mitsuhiko/rye/issues/515

[tool.isort]
profile = "black"
